feat: first level pages

--- a/layouts/partials/breadcrumbs.html
+++ b/layouts/partials/breadcrumbs.html
@@ -1,5 +1,5 @@
 <div id="breadcrumbs">
-    <a href="/">Home</a>
+    <a href="/">{{ i18n "Home" }}</a>
     {{ template "breadcrumbnav" (dict "p1" . "p2" .) }}
 </div>
 {{- define "breadcrumbnav" -}}
