--- a/layouts/partials/content-footer.html
+++ b/layouts/partials/content-footer.html
@@ -1,6 +1,6 @@
 <div class="d-flex flex-row justify-content-between mt-5 pt-3 border-top">
   <div class="align-self-center" style="width:50%">
-    <a class="btn btn-success" href="/getting-help">Get CUE support and training from Hofstadter</a>
+    <a class="btn btn-success" href="/getting-help">{{ i18n "Get CUE support and training from Hofstadter"  }}</a>
   </div>
 
   <div class="" style="width:40%">
