--- a/layouts/partials/mailchimp.html
+++ b/layouts/partials/mailchimp.html
@@ -1,10 +1,10 @@
 <!-- Begin Mailchimp Signup Form -->
 <form action="https://hofstadter.us5.list-manage.com/subscribe/post?u=0a1a70b045ecd3c72190643b8&amp;id=c3d689ab6e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate mt-3" target="_blank" novalidate>
   <div class="d-flex flex-row">
-    <div class="pr-3"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary"></div>
+    <div class="pr-3"><input type="submit" value='{{ i18n "Subscribe" }}' name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary"></div>
     <div class="form-group">
       <input type="email" value="" placeholder="user@domain.com" name="EMAIL" class="required email" id="mce-EMAIL">
-      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+      <small id="emailHelp" class="form-text text-muted">{{ i18n "We'll never share your email with anyone else."}}</small>
     </div>
     <div id="mce-responses">
       <div class="response" id="mce-error-response" style="display:none"></div>
