--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -52,6 +52,8 @@
     }
   </script>
 
+  <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
+
   {{- $c1 := resources.Get "css/fontawesome.min.css" }}
   {{- $c2 := resources.Get "plugins/auto-complete.css" | minify }}
   {{- $c3 := resources.Get "css/ace.scss" | toCSS | minify }}
