who's using CUE and other changes

--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -14,7 +14,7 @@
         <!-- only add the navbar toggle button if there are elements within the toggle -->
         {{- if .Site.Menus.shortcuts}}
             <button class="navbar-toggler navbar-toggler-right collapsed" type="button" data-toggle="collapse" data-target="#navbarMainCollapse" aria-controls="navbarMainCollapse" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
+							<i class='fas fa-bars fa-lg text-white'></i>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarMainCollapse">
