--- a/layouts/partials/menu-hugo.html
+++ b/layouts/partials/menu-hugo.html
@@ -21,16 +21,20 @@
         {{- if $isCurrent }} current{{ end }}
         {{- if .Params.alwaysopen}} alwaysopen{{end -}}
         ">
-        <span class="d-flex justify-content-between">
+        <span class="d-flex">
           <a class="nav-link py-0 px-2 {{if (or $isCurrent $isAncestor)}}current{{end}}"
           href="{{.RelPermalink}}">
             {{.Title}}
         </a>
         {{- if $hasChildren }}
-        <i
+        <span
           onclick="toggleMenuItem()"
+          class="d-flex flex-fill justify-content-end"
+        >
+        <i
           class="mr-1 py-0 fas fa-lg {{ if (or $isCurrent $isAncestor)}}fa-caret-down{{ else }}fa-caret-right{{ end }}"
         ></i>
+        </span>
         {{ end }}
         </span>
         {{- if $hasChildren }}
